# task-manager-cli

./: .gitignore  CMakeLists.txt  COMMIT_PLAN.md  Makefile  README.md
.github/workflows/: ci.yml
include/: storage.h  task.h  tui.h  ui.h  utils.h
scripts/: build.ps1  run-menu.ps1  setup-windows.ps1
src/: main.c  storage.c  task.c  tui.c  ui.c  utils.c
tests/: test_tasks.c
